# c2l

./: .gitignore  Cargo.toml
benches/: hash_file_bench.rs  shuffle_bench.rs
src/: action.rs  artifact.rs  bb.rs  group.rs  hashing.rs  lib.rs  localstore.rs  memory_bb.rs  protocol.rs  shuffler.rs  statement.rs  trustee.rs  util.rs
tests/: demo.rs  size.rs
