[package]
name = "c2l"
version = "0.1.0"
authors = ["ruescasd <fastness@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
sha2 = "0.9.1"
rayon = "1.5"
crepe = "0.1.2"
tempfile = "3.1.0"
uuid = { version="0.8.1", features = ["serde", "v4"]}
hex = "0.4.2"
base64 = "0.13.0"
strum = { version = "0.20", features = ["derive"] }
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"]  }
simplelog = "0.9.0"
log = "0.4.11"
criterion = "0.3"
serial_test = "0.5.0"
regex = "1"

crypto = { path="./deps/crypto" }

[dev-dependencies]


[[bench]]
name = "signature_bench"
harness = false